updated link to privacy conditions

--- a/templates/snippets/footer/footer.html
+++ b/templates/snippets/footer/footer.html
@@ -1,7 +1,7 @@
 <div class="footer">
   {% block footer %}
   <a href="/about">Acerca de este proyecto y su finalidad</a>
-   | <a href="https://api.cloud.ifca.es:8080/swift/v1/covid19/AVISO%20LEGAL%20Y%20POLI%C3%ACTICA%20DE%20PRIVACIDAD.pdf" target="_blank">Términos y condiciones de uso</a>
+   | <a href="https://api.cloud.ifca.es:8080/swift/v1/covid19/AVISO%20LEGAL%20Y%20POLITICA%20DE%20PRIVACIDAD.pdf" target="_blank">Términos y condiciones de uso</a>
    | <a href="mailto:covid19training@ifca.unican.es">Contacta con nosotros</a>
    | Copyright &copy; IFCA - CSIC - HUMV
   {% endblock %}
