--- a/static/styles/start.scss
+++ b/static/styles/start.scss
@@ -43,3 +43,40 @@
   margin-bottom: 1rem;
   width: 40%;
 }
+
+@media (max-width: 750px) {
+  .start {
+    &__title {
+      color: #ff9900;
+      font-size: 9.2vw;
+      text-transform: uppercase;
+    }
+
+    &__label {
+      font-size: 5.5vw;
+      text-align: justify;
+    }
+
+    &__select {
+      margin: unset;
+    }
+
+    &__button {
+      width: unset;
+    }
+
+    &__logout {
+      color: #d9d9d9;
+      font-size: 3.75vw;
+
+      strong {
+        color: #fff;
+      }
+    }
+  }
+
+  #type_of_profile {
+    margin-bottom: 0.5rem;
+    width: 100%;
+  }
+}
