--- a/templates/results.html
+++ b/templates/results.html
@@ -5,22 +5,24 @@
 {% block content %}
 {% include "snippets/home-button/home-button.html" %}
 <div class="content results">
-  <h1>Resultados del test</h1>
+  <h1 class="results__title">Resultados del test</h1>
   {% if res[5]==0 %}
-    <p>No ha contestado a ninguna pregunta del test</p>
+    <p class="results__paragraph-first">No ha contestado a ninguna pregunta del test</p>
   {% else %}
     <div class="results__details">
-      <p><b>Precisión global:</b>&nbsp;{{res[0]}}%</p>
-      <p><b>Sensibilidad:</b>&nbsp;{{res[1]}}</p>
-      <p><b>Especificidad:</b>&nbsp;{{res[2]}}</p>
-      <p><b>Valor predictivo positivo:</b>&nbsp;{{res[3]}}</p>
-      <p><b>Valor predictivo negativo:</b>&nbsp;{{res[4]}}</p>
-      <p>NOTA: Valores calculados para COVID-19</p>
-      <p>Más información acerca de estas métricas <a href="https://api.cloud.ifca.es:8080/swift/v1/covid19/CONOCE%20COMO%20SE%20HAN%20REALIZADO%20LOS%20C%C3%81LCULOS.pdf" target="_blank">aqui.</a></p>
+      <p class="list">
+        <b>Precisión global:</b>&nbsp;{{res[0]}}%<br>
+        <b>Sensibilidad:</b>&nbsp;{{res[1]}}<br>
+        <b>Especificidad:</b>&nbsp;{{res[2]}}<br>
+        <b>Valor predictivo positivo:</b>&nbsp;{{res[3]}}<br>
+        <b>Valor predictivo negativo:</b>&nbsp;{{res[4]}}
+      </p>
+      <div class="results__note">
+        <p><strong>NOTA:</strong> Valores calculados para COVID-19. Más información acerca de estas métricas <a href="https://api.cloud.ifca.es:8080/swift/v1/covid19/CONOCE%20COMO%20SE%20HAN%20REALIZADO%20LOS%20C%C3%81LCULOS.pdf" target="_blank">aquí</a>.</p>
+      </div>
     </div>
   {% endif %}
-  <br>
-  <p>¿Quieres intentarlo otra vez con nuevas imágenes?</p>
+  <p class="results__paragraph-again">¿Quieres intentarlo con nuevas imágenes?</p>
 
   <div class="results__try-again" >
     <button
@@ -33,47 +35,49 @@
   {% if res[0]==100 %}
     <h2><b>Felicidades! Todas las respuestas correctas!</b></h2>
   {% else %}
-    {% if failed_answers|length!=0 %}
-    <div class="results__separator"></div>
-      <h2><b>Revisa tus respuestas erróneas</b></h2>
-    {% endif%}
-    {% for answer in failed_answers %}
-      <div class="results__card">
-        <div class="results__element">
-          {% if answer[2]==1  %}
+    <div class="results__wrong-answers">
+      {% if failed_answers|length!=0 %}
+      <div class="results__separator"></div>
+        <h2 class="results__subtitle">Revisa tus respuestas erróneas</h2>
+      {% endif%}
+      {% for answer in failed_answers %}
+        <div class="results__card">
+          <div class="results__element">
+            {% if answer[2]==1  %}
+              <div class="results__answer">
+                <b>Respuesta correcta:</b>&nbsp;<p class="results__correct">Patológico (compatible con COVID-19)</p>
+              </div>
+            {% elif answer[2]==0  %} 
             <div class="results__answer">
-              <b>Respuesta correcta:</b>&nbsp;<p class="results__correct">Patológico (compatible con COVID-19)</p>
+              <b>Respuesta correcta:</b>&nbsp;<p class="results__correct">No Patológico</p>
             </div>
-          {% elif answer[2]==0  %} 
-          <div class="results__answer">
-            <b>Respuesta correcta:</b>&nbsp;<p class="results__correct">No Patológico</p>
+            {% elif answer[2]==2  %} 
+              <div class="results__answer">
+                <b>Respuesta correcta:</b>&nbsp;<p class="results__correct">Patológico ({{answer[4]}})</p>
+              </div>
+            {% endif %}
+  
+            {% if answer[3]==1  %}
+              <div class="results__answer">
+                <b>Tu respuesta:</b>&nbsp;<p class="results__wrong">Patológico (compatible con COVID-19)</p>
+              </div>
+            {% elif answer[3]==0  %} 
+              <div class="results__answer">
+                <b>Tu respuesta:</b>&nbsp;<p class="results__wrong">No Patológico</p>
+              </div>
+            {% elif answer[3]==2  %} 
+              <div class="results__answer">
+                <b>Tu respuesta:</b>&nbsp;<p class="results__wrong">Patológico ({{answer[4]}})</p>
+              </div>
+            {% endif %}
           </div>
-          {% elif answer[2]==2  %} 
-            <div class="results__answer">
-              <b>Respuesta correcta:</b>&nbsp;<p class="results__correct">Patológico ({{answer[4]}})</p>
-            </div>
-          {% endif %}
-
-          {% if answer[3]==1  %}
-            <div class="results__answer">
-              <b>Tu respuesta:</b>&nbsp;<p class="results__wrong">Patológico (compatible con COVID-19)</p>
-            </div>
-          {% elif answer[3]==0  %} 
-            <div class="results__answer">
-              <b>Tu respuesta:</b>&nbsp;<p class="results__wrong">No Patológico</p>
-            </div>
-          {% elif answer[3]==2  %} 
-            <div class="results__answer">
-              <b>Tu respuesta:</b>&nbsp;<p class="results__wrong">Patológico ({{answer[4]}})</p>
-            </div>
-          {% endif %}
+          <div class="results__image">
+            <img src="static/img/{{answer[1]}}.DCM.JPG" width="57%">
+          </div>
         </div>
-        <div class="results__image">
-          <img src="static/img/{{answer[1]}}.DCM.JPG" width="57%">
-        </div>
-      </div>
-      <br><br><br>
-    {% endfor %}
+        <br><br><br>
+      {% endfor %}
+    </div>
   {% endif%}
 </div>
 {% endblock %}
