--- a/static/styles/start.scss
+++ b/static/styles/start.scss
@@ -32,9 +32,10 @@
     a {
       color: #ff9900;
       text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 }
@@ -46,6 +47,8 @@
 
 @media (max-width: 750px) {
   .start {
+    padding: 1rem;
+
     &__title {
       color: #ff9900;
       font-size: 9.2vw;
